# blogger

./: .gitignore  LICENSE  README.md
backend/: Dockerfile  Makefile  pyproject.toml
backend/blogger/: asgi.py  database.py  manage.py  model.py
