[tool.poetry]
name = "blogger"
version = "0.1.0"
description = ""
authors = ["Tory Clasen <ToryClasen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.13.3"
fastapi = "^0.63.0"
typer = "^0.3.2"
pydantic = "^1.7.3"
databases = {extras = ["postgresql"], version = "^0.4.1"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-black = "^0.3.12"
pytest-isort = "^1.3.0"
pytest-flake8 = "^1.0.7"
pytest-mypy = "^0.8.0"
pytest-bandit = "^0.5.2"
pytest-icdiff = "^0.5"
pytest-socket = "^0.3.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
blogger = "blogger.manage:run"